Fixed the display list  #directory-container.list-view .card-img-wrap { display: none; }

--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -431,8 +431,7 @@ main {
 }
 
 #directory-container.list-view .card-img-wrap {
-  width: 70px;
-  height: 70px;
+display: none;
 }
 
 #directory-container.list-view .card-tagline {
